CSS Nav Link fix on mobile

--- a/_sass/layouts/_header.scss
+++ b/_sass/layouts/_header.scss
@@ -51,6 +51,11 @@
     text-decoration: none;
     border-bottom: 2px solid transparent;
     transition: all 0.3s ease;
+    padding: 0.5rem 0.2rem;
+    @include for-size(tablet-landscape-up) {
+      padding: 0.8rem 1.2rem;
+      font-size: 1.1rem;
+    }
     &:hover,
     &:focus {
       background-color: $main-theme-accent-dark;
